appcore/replacePath.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: aplicacion-replacepath
  namespace: appcore
spec:
  replacePath:
    path: /
