appcore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appcore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appcore
  template:
    metadata:
      labels:
        app: appcore
    spec:
      containers:
      - name: appcore
        image: nginx:stable-alpine
        resources:
          limits:
            memory: "8Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
