appcore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appcore
spec:
  selector:
    app: appcore
  ports:
  - port: 80
    targetPort: 80
