appcore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdemo
  annotations:
    traefik.ingress.kubernetes.io/router.pathmatcher: /
  labels:
    name: appdemo
spec:
  rules:
  - host: cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/appcore"
        backend:
          service:
            name: appcore
            port: 
              number: 80
